// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Upload render function Add image 1`] = `
<CreateProfilePage
  addImage={[Function]}
>
  <div
    className="container"
  >
    <div
      className="profile-page tl"
    >
      <h1
        className="headline mt2"
      />
      <div
        className="profile-form mb3"
      >
        <div
          className="row clearfix m-0"
        >
          <div
            className="col-3"
          >
            <ImageUpload
              buttonText="Upload profilbillede"
              onFile={[Function]}
              previewImage={null}
              style={
                Object {
                  "borderRadius": "50%",
                }
              }
            >
              <div
                className="image-upload undefined"
              >
                <div
                  className="image-upload--zone position-relative"
                  style={
                    Object {
                      "borderRadius": "50%",
                      "height": "150px",
                      "overflow": "hidden",
                      "width": "150px",
                    }
                  }
                >
                  <div
                    className="d-flex align-items-center justify-content-center h-100 "
                  >
                    <i
                      className="material-icons"
                      style={
                        Object {
                          "fontSize": 100,
                        }
                      }
                    >
                      image
                    </i>
                  </div>
                  <div
                    className="droppable-image-overlay"
                  />
                </div>
                <div
                  style={
                    Object {
                      "clear": "both",
                    }
                  }
                />
                <UploadButton
                  buttonText="Upload profilbillede"
                  className="mt-2"
                  readFiles={[Function]}
                >
                  <label
                    className="mt-2"
                  >
                    <Button
                      Tag="span"
                      size="medium"
                      type="tertiary"
                    >
                      <span
                        className=" btn Button Button__tertiary Button__medium"
                      >
                        <Icon
                          className="align-middle"
                          name="photo"
                        >
                          <i
                            className="material-icons material-icons-photo align-middle"
                          >
                            photo
                          </i>
                        </Icon>
                        <span
                          className="align-middle ml-2"
                        >
                          Upload profilbillede
                        </span>
                      </span>
                    </Button>
                    <input
                      accept="image/png, image/jpeg"
                      className="droppable-image-field--file-input"
                      onChange={[Function]}
                      type="file"
                    />
                  </label>
                </UploadButton>
                <Error />
              </div>
            </ImageUpload>
          </div>
          <div
            className="col-9 mb2"
          >
            <p
              className="mb2"
            >
              <b>
                Indtast dine personlige oplysninger:
              </b>
            </p>
            <div
              className="mb2"
            >
              <UserProfileForm
                library={
                  <spinner
                    size="12px"
                  />
                }
              >
                <form
                  className="profile-form needs-validation"
                  onSubmit={[Function]}
                  style={
                    Object {
                      "maxWidth": "400px",
                    }
                  }
                >
                  <div
                    className="input-group mb2   has-feedback"
                  >
                    <input
                      className="form-control mb3   has-feedback"
                      name="name"
                      onChange={[Function]}
                      placeholder="Vælg brugernavn"
                      type="text"
                      value=""
                    />
                    <span
                      aria-hidden="true"
                      className="form-control-feedback "
                    >
                      <i
                        className="material-icons"
                        style={
                          Object {
                            "fontSize": 18,
                          }
                        }
                      >
                         
                      </i>
                    </span>
                  </div>
                  <p
                    className="mb6"
                  >
                    Du er logget på via 
                    <spinner
                      size="12px"
                    />
                  </p>
                  <label
                    className="checkbox"
                    htmlFor="acceptedTerms"
                  >
                    <input
                      className="checkbox"
                      id="acceptedTerms"
                      name="acceptedTerms"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <span />
                     Jeg har læst og accepteret
                     
                    <a
                      href="#terms"
                    >
                      reglerne for anvendelse af Læsekompasset
                    </a>
                  </label>
                  <button
                    className="btn btn-success btn-block"
                  >
                    Opret profil
                     
                  </button>
                </form>
              </UserProfileForm>
            </div>
            <logout>
              Jeg ønsker alligevel ikke at oprette en profil
            </logout>
          </div>
        </div>
      </div>
      <div
        className="terms"
        id="terms"
      >
        Her skal stå regler for anvendelse af læsekompasset...
      </div>
    </div>
  </div>
</CreateProfilePage>
`;

exports[`Image Upload render function renders an image upload form 1`] = `
<div
  className="container"
>
  <div
    className="profile-page tl"
  >
    <h1
      className="headline mt2"
    />
    <div
      className="profile-form mb3"
    >
      <div
        className="row clearfix m-0"
      >
        <div
          className="col-3"
        >
          <div
            className="image-upload undefined"
          >
            <div
              className="image-upload--zone position-relative"
              style={
                Object {
                  "borderRadius": "50%",
                  "height": "150px",
                  "overflow": "hidden",
                  "width": "150px",
                }
              }
            >
              <div
                className="d-flex align-items-center justify-content-center h-100 "
              >
                <i
                  className="material-icons"
                  style={
                    Object {
                      "fontSize": 100,
                    }
                  }
                >
                  image
                </i>
              </div>
              <div
                className="droppable-image-overlay"
              >
                
              </div>
            </div>
            <div
              style={
                Object {
                  "clear": "both",
                }
              }
            />
            <label
              className="mt-2"
              style={undefined}
            >
              <span
                className=" btn Button Button__tertiary Button__medium"
              >
                <i
                  className="material-icons material-icons-photo align-middle"
                >
                  photo
                </i>
                <span
                  className="align-middle ml-2"
                >
                  Upload profilbillede
                </span>
              </span>
              <input
                accept="image/png, image/jpeg"
                className="droppable-image-field--file-input"
                name={undefined}
                onChange={[Function]}
                type="file"
              />
            </label>
          </div>
        </div>
        <div
          className="col-9 mb2"
        >
          <p
            className="mb2"
          >
            <b>
              Indtast dine personlige oplysninger:
            </b>
          </p>
          <div
            className="mb2"
          >
            <form
              className="profile-form needs-validation"
              onSubmit={[Function]}
              style={
                Object {
                  "maxWidth": "400px",
                }
              }
            >
              <div
                className="input-group mb2   has-feedback"
              >
                <input
                  className="form-control mb3   has-feedback"
                  name="name"
                  onChange={[Function]}
                  placeholder="Vælg brugernavn"
                  type="text"
                  value=""
                />
                <span
                  aria-hidden="true"
                  className="form-control-feedback "
                >
                  <i
                    className="material-icons"
                    style={
                      Object {
                        "fontSize": 18,
                      }
                    }
                  >
                     
                  </i>
                </span>
              </div>
              <p
                className="mb6"
              >
                Du er logget på via 
                <spinner
                  size="12px"
                />
              </p>
              <label
                className="checkbox"
                htmlFor="acceptedTerms"
              >
                <input
                  checked={undefined}
                  className="checkbox"
                  disabled={undefined}
                  id="acceptedTerms"
                  name="acceptedTerms"
                  onChange={[Function]}
                  type="checkbox"
                />
                <span />
                 Jeg har læst og accepteret
                 
                <a
                  href="#terms"
                >
                  reglerne for anvendelse af Læsekompasset
                </a>
              </label>
              <button
                className="btn btn-success btn-block"
                disabled={undefined}
              >
                Opret profil
                 
                
              </button>
            </form>
          </div>
          <logout>
            Jeg ønsker alligevel ikke at oprette en profil
          </logout>
        </div>
      </div>
    </div>
    <div
      className="terms"
      id="terms"
    >
      Her skal stå regler for anvendelse af læsekompasset...
    </div>
  </div>
</div>
`;
